<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/profile_button"
        app:showAsAction="never"
        android:title="@string/profil"
        android:orderInCategory="1">
    </item>
    <item
        android:id="@+id/home_button"
        app:showAsAction="never"
        android:title="@string/home"
        android:orderInCategory="2">
    </item>
    <item
        android:id="@+id/history_button"
        app:showAsAction="never"
        android:title="@string/History"
        android:orderInCategory="3">
    </item>
    <item
        android:id="@+id/log_out_button"
        app:showAsAction="never"
        android:title="@string/Logout"
        android:orderInCategory="4">
    </item>

</menu>