<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical"
    android:weightSum="10">

    <TextView
        android:id="@+id/LoginTvL"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="32dp"
        android:background="@color/primary"
        android:gravity="center"
        android:padding="12dp"
        android:text="@string/Login"
        android:textColor="@color/text"
        android:textSize="24sp" />

    <EditText
        android:id="@+id/emailEtL"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="120dp"
        android:layout_marginRight="10dp"
        android:hint="@string/EmailAddress"
        android:inputType="textEmailAddress"
        android:textColor="@color/text"
        android:textSize="20sp"
        android:textAppearance="@style/hint_style"/>

    <EditText
        android:id="@+id/passwordEtL"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="50dp"
        android:layout_marginRight="10dp"
        android:hint="@string/Password"
        android:inputType="textPassword"
        android:textColor="@color/text"
        android:textSize="20sp"
        android:textAppearance="@style/hint_style"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="120dp"
        android:gravity="center"
        android:orientation="vertical">

        <Button
            android:id="@+id/loginBtnL"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:backgroundTint="@color/primary"
            android:onClick="login"
            android:text="@string/Login"
            android:textColor="@color/text"
            android:textSize="20sp" />

        <Button
            android:id="@+id/registrationBtnL"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:backgroundTint="@color/secondary"
            android:onClick="registration"
            android:text="@string/Registration"
            android:textColor="@color/highlight"
            android:textSize="16sp" />

    </LinearLayout>
</LinearLayout>