<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_margin="8dp"
    android:clickable="true"
    android:focusable="true">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="8dp">

        <!-- Kép -->
        <ImageView
            android:id="@+id/doctorImage"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:layout_marginEnd="8dp"
            android:scaleType="centerCrop"
            android:adjustViewBounds="true"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent" />

        <TextView
            android:id="@+id/doctorName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/doctor_name"
            app:layout_constraintBottom_toBottomOf="@+id/doctorImage"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.01"
            app:layout_constraintStart_toEndOf="@+id/doctorImage"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.0"
            android:textStyle="bold"/>

        <TextView
            android:id="@+id/specialtyD"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/SpecialtyList"
            app:layout_constraintBottom_toBottomOf="@+id/doctorImage"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.01"
            app:layout_constraintStart_toEndOf="@+id/doctorImage"
            app:layout_constraintTop_toBottomOf="@+id/doctorName"
            app:layout_constraintVertical_bias="0.25" />

        <TextView
            android:id="@+id/bioD"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/bio"
            android:ellipsize="end"
            android:maxLines="4"
            android:scrollHorizontally="false"
            android:inputType="textMultiLine"
            android:gravity="start"
            android:breakStrategy="high_quality"
            android:hyphenationFrequency="full"
            app:layout_constraintBottom_toBottomOf="@+id/doctorImage"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.01"
            app:layout_constraintStart_toEndOf="@+id/doctorImage"
            app:layout_constraintTop_toBottomOf="@+id/specialtyD"
            app:layout_constraintVertical_bias="0.7"
            tools:ignore="TextViewEdits" />

        <ImageView
            android:id="@+id/nextIcon"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:src="@android:drawable/ic_media_next"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toEndOf="@+id/bioD"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="1.0"
            app:tint="@color/highlight" />


    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.cardview.widget.CardView>
