<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical">

    <TextView
        android:id="@+id/LoginTvL"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/primary"
        android:gravity="center"
        android:padding="12dp"
        android:text="@string/select_date_and_time"
        android:textColor="@color/text"
        android:textSize="24sp" />

    <!-- CardView az egész tartalomhoz -->
    <androidx.cardview.widget.CardView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:padding="16dp">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="16dp">

            <!-- Szakterület -->
            <TextView
                android:id="@+id/textSpecialty"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:text="@string/SpecialtyList"
                android:textColor="@color/text"
                android:textSize="18sp"
                android:textStyle="bold" />

            <!-- Orvos -->
            <TextView
                android:id="@+id/textDoctor"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                android:text="@string/doctor"
                android:textColor="@color/text"
                android:textSize="18sp"
                android:textStyle="bold" />

            <!-- Dátum kiválasztása -->
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                android:orientation="horizontal">

                <!-- Dátum kiválasztása -->
                <DatePicker
                    android:id="@+id/datePicker"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="16dp"
                    android:calendarViewShown="false"
                    android:datePickerMode="spinner" />
            </LinearLayout>

            <!-- Időpontok -->
            <RadioGroup
                android:id="@+id/radioGroupTime"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:orientation="horizontal">

                <RadioButton
                    android:id="@+id/radioTime10"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="10:00" />

                <RadioButton
                    android:id="@+id/radioTime11"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="11:00" />

                <RadioButton
                    android:id="@+id/radioTime13"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="13:00" />
            </RadioGroup>

            <!-- Foglalás gomb -->
            <Button
                android:id="@+id/buttonBook"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="16dp"
                android:backgroundTint="@color/primary"
                android:text="Foglalás"
                android:textColor="@color/text"
                android:textSize="20sp" />
        </LinearLayout>

    </androidx.cardview.widget.CardView>
</LinearLayout>
